--- a/Backend/parent-service/pom.xml
+++ b/Backend/parent-service/pom.xml
@@ -9,28 +9,20 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.newsforyou</groupId>
-	<artifactId>news-service</artifactId>
+	<artifactId>parent-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>news-service</name>
-	<description>News Service</description>
+	<name>parent-service</name>
+	<description>Parent Service</description>
+	<packaging>pom</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -55,4 +47,9 @@
 		</plugins>
 	</build>
 
+	<modules>
+		<module>user-service</module>
+		<module>agency-service</module>
+		<module>news-and-catagory-service</module>
+	</modules>
 </project>
