--- a/Backend/parent-service/news-and-category-service/pom.xml
+++ b/Backend/parent-service/news-and-category-service/pom.xml
@@ -6,9 +6,9 @@
     <artifactId>parent-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>news-and-catagory-service</artifactId>
-  <name>news-and-catagory-service</name>
-  <description>News and catagory service</description>
+  <artifactId>news-and-category-service</artifactId>
+  <name>news-and-category-service</name>
+  <description>News and category service</description>
   <properties>
 		<java.version>17</java.version>
 	</properties>
@@ -21,7 +21,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -37,6 +40,15 @@
 		    <artifactId>javax.servlet-api</artifactId>
 		    <version>4.0.1</version> <!-- Use the appropriate version -->
 		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
 		</dependency>
 	</dependencies>
 </project>
