Agency service added

--- a/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
+++ b/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.url=mongodb://localhost:27017/newforyou
 
+agency_service_url=http://localhost:8081/api/agency/
 server.port=8080
