--- a/Backend/parent-service/agency-service/src/main/resources/application.properties
+++ b/Backend/parent-service/agency-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.url=mongodb://localhost:27017/newforyou
 
+category_service_url=http://localhost:8080/api/category/
 server.port=8081
