discover server and api gateway added

--- a/Backend/parent-service/pom.xml
+++ b/Backend/parent-service/pom.xml
@@ -16,6 +16,7 @@
 	<packaging>pom</packaging>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -29,6 +30,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-dependencies</artifactId>
+          <version>${spring-cloud.version}</version>
+          <type>pom</type>
+          <scope>import</scope>
+        </dependency>
+      </dependencies>
+    </dependencyManagement>
 
 	<build>
 		<plugins>
@@ -51,5 +63,7 @@
 		<module>user-service</module>
 		<module>agency-service</module>
 		<module>news-and-category-service</module>
+		<module>discovery-server</module>
+		<module>api-gateway</module>
 	</modules>
 </project>
