--- a/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
+++ b/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.url=mongodb://localhost:27017/newforyou
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 agency_service_url=http://localhost:8081/api/agency/
 server.port=8080
+spring.application.name=news-and-category-service
