--- a/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
+++ b/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 agency_service_url=http://localhost:8081/api/agency/
 server.port=8080
 spring.application.name=news-and-category-service
+#Cors configuration
+allowed.origins=*
