--- a/Backend/parent-service/user-service/src/main/resources/application.properties
+++ b/Backend/parent-service/user-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.url=mongodb://localhost:27017/newforyou
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 server.port=8082
 spring.application.name=user-service
+#Cors configuration
+allowed.origins=*
