--- a/Frontend/news-for-you/package.json
+++ b/Frontend/news-for-you/package.json
@@ -2,6 +2,7 @@
   "name": "news-for-you",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8181",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "axios": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
