--- a/Backend/parent-service/api-gateway/src/main/resources/application.properties
+++ b/Backend/parent-service/api-gateway/src/main/resources/application.properties
@@ -56,4 +56,9 @@ spring.cloud.gateway.routes[10].id=discovery-server-static
 spring.cloud.gateway.routes[10].uri=http://localhost:8761
 spring.cloud.gateway.routes[10].predicates[0]=Path=/eureka/**
 
+## User Service Route
+spring.cloud.gateway.routes[11].id=user-service
+spring.cloud.gateway.routes[11].uri=lb://user-service
+spring.cloud.gateway.routes[11].predicates[0]=Path=/api/user/**
+
 server.port=8181
