--- a/Backend/parent-service/user-service/src/main/resources/application.properties
+++ b/Backend/parent-service/user-service/src/main/resources/application.properties
@@ -4,4 +4,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 server.port=8082
 spring.application.name=user-service
 #Cors configuration
-allowed.origins=*
+allowed.origins=http://localhost:3000
