--- a/Backend/parent-service/agency-service/src/main/resources/application.properties
+++ b/Backend/parent-service/agency-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.url=mongodb://localhost:27017/newforyou
 
-category_service_url=http://localhost:8080/api/category/
+category_service_url=http://news-and-category-service:8080/api/category/
 server.port=8081
 spring.application.name=agency-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
