--- a/Backend/parent-service/news-and-category-service/pom.xml
+++ b/Backend/parent-service/news-and-category-service/pom.xml
@@ -50,6 +50,11 @@
 		    <artifactId>hibernate-validator</artifactId>
 		</dependency>
 		<dependency>
+	        <groupId>com.rometools</groupId>
+	        <artifactId>rome</artifactId>
+	        <version>1.15.0</version>
+	    </dependency>
+		<dependency>
 		    <groupId>javax.validation</groupId>
 		    <artifactId>validation-api</artifactId>
 		    <version>2.0.1.Final</version>
