--- a/Frontend/news-for-you/package.json
+++ b/Frontend/news-for-you/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.4",
+    "axios": "^1.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
