--- a/Backend/parent-service/agency-service/src/main/resources/application.properties
+++ b/Backend/parent-service/agency-service/src/main/resources/application.properties
@@ -7,3 +7,19 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #Cors configuration
 allowed.origins=*
 
+#Resilinece4j Properties
+resilience4j.circuitbreaker.instances.news.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.news.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.news.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.news.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.news.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.news.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.news.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.news.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#Resilience4J Timeout Properties
+resilience4j.timelimiter.instances.news.timeout-duration=5s
+
+#Resilience4J Retry Properties
+resilience4j.retry.instances.news.max-attempts=3
+resilience4j.retry.instances.news.wait-duration=5s
