--- a/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
+++ b/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
@@ -5,3 +5,20 @@ server.port=8080
 spring.application.name=news-and-category-service
 #Cors configuration
 allowed.origins=*
+
+#Resilinece4j Properties
+resilience4j.circuitbreaker.instances.agency.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.agency.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.agency.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.agency.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.agency.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.agency.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.agency.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.agency.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#Resilience4J Timeout Properties
+resilience4j.timelimiter.instances.agency.timeout-duration=5s
+
+#Resilience4J Retry Properties
+resilience4j.retry.instances.agency.max-attempts=3
+resilience4j.retry.instances.agency.wait-duration=5s
