Zipkin tracing added

--- a/Backend/parent-service/agency-service/src/main/resources/application.properties
+++ b/Backend/parent-service/agency-service/src/main/resources/application.properties
@@ -23,3 +23,7 @@ resilience4j.timelimiter.instances.news.timeout-duration=5s
 #Resilience4J Retry Properties
 resilience4j.retry.instances.news.max-attempts=3
 resilience4j.retry.instances.news.wait-duration=5s
+
+#zipkin
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
