--- a/Backend/parent-service/user-service/src/main/resources/application.properties
+++ b/Backend/parent-service/user-service/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8082
 spring.application.name=user-service
 #Cors configuration
 allowed.origins=http://localhost:3000
+
+#zipkin
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
