--- a/Backend/parent-service/api-gateway/src/main/resources/application.properties
+++ b/Backend/parent-service/api-gateway/src/main/resources/application.properties
@@ -62,3 +62,7 @@ spring.cloud.gateway.routes[11].uri=lb://user-service
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/user/**
 
 server.port=8181
+
+#zipkin
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
