--- a/Backend/parent-service/news-and-category-service/pom.xml
+++ b/Backend/parent-service/news-and-category-service/pom.xml
@@ -67,5 +67,13 @@
 		    <artifactId>validation-api</artifactId>
 		    <version>2.0.1.Final</version>
 		</dependency>
+		<dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>io.zipkin.reporter2</groupId>
+          <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
 	</dependencies>
 </project>
