--- a/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
+++ b/Backend/parent-service/news-and-category-service/src/main/resources/application.properties
@@ -22,3 +22,7 @@ resilience4j.timelimiter.instances.agency.timeout-duration=5s
 #Resilience4J Retry Properties
 resilience4j.retry.instances.agency.max-attempts=3
 resilience4j.retry.instances.agency.wait-duration=5s
+
+#zipkin
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
