--- a/Backend/parent-service/agency-service/pom.xml
+++ b/Backend/parent-service/agency-service/pom.xml
@@ -11,6 +11,8 @@
   <description>Agency service backend</description>
   	<properties>
 		<java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,6 +71,10 @@
         <dependency>
           <groupId>io.zipkin.reporter2</groupId>
           <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 	</dependencies>
 
