--- a/Backend/parent-service/discovery-server/pom.xml
+++ b/Backend/parent-service/discovery-server/pom.xml
@@ -11,6 +11,8 @@
   <description>Discovery server</description>
   <properties>
 	<java.version>17</java.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
   <dependencies>
   	<dependency>
@@ -24,6 +26,15 @@
     <dependency>
        <groupId>io.zipkin.reporter2</groupId>
        <artifactId>zipkin-reporter-brave</artifactId>
+    </dependency>
+    <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>io.micrometer</groupId>
+       	<artifactId>micrometer-registry-prometheus</artifactId>
+       	<scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
