--- a/Backend/parent-service/news-and-category-service/pom.xml
+++ b/Backend/parent-service/news-and-category-service/pom.xml
@@ -11,7 +11,9 @@
   <description>News and category service</description>
   <properties>
 		<java.version>17</java.version>
-	</properties>
+    	<maven.compiler.source>17</maven.compiler.source>
+    	<maven.compiler.target>17</maven.compiler.target>
+  </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -71,6 +73,11 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
         </dependency>
+    	<dependency>
+        	<groupId>io.micrometer</groupId>
+        	<artifactId>micrometer-registry-prometheus</artifactId>
+        	<scope>runtime</scope>
+    	</dependency>
         <dependency>
           <groupId>io.zipkin.reporter2</groupId>
           <artifactId>zipkin-reporter-brave</artifactId>
