--- a/Backend/parent-service/user-service/pom.xml
+++ b/Backend/parent-service/user-service/pom.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+  
   <parent>
-    <groupId>com.newsforyou</groupId>
     <artifactId>parent-service</artifactId>
+    <groupId>com.newsforyou</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>user-service</artifactId>
+  <modelVersion>4.0.0</modelVersion>
   <name>user-service</name>
   <description>User Service Backend</description>
   	<properties>
 		<java.version>17</java.version>
+    	<maven.compiler.source>17</maven.compiler.source>
+    	<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,7 +40,7 @@
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
-		    <version>4.0.1</version> <!-- Use the appropriate version -->
+		    <version>4.0.1</version>
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -85,6 +88,16 @@
           <groupId>io.zipkin.reporter2</groupId>
           <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    	<dependency>
+        	<groupId>io.micrometer</groupId>
+        	<artifactId>micrometer-registry-prometheus</artifactId>
+        	<scope>runtime</scope>
+    	</dependency>
+        
 	</dependencies>
 
 </project>
