--- a/Backend/parent-service/user-service/src/main/resources/application.properties
+++ b/Backend/parent-service/user-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ allowed.origins=http://localhost:3000
 #zipkin
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
